--- a/LiveCoding/app/src/main/res/layout/content_main.xml
+++ b/LiveCoding/app/src/main/res/layout/content_main.xml
@@ -5,16 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.beblue.fatec.livecoding.MainActivity"
+    tools:context="br.com.beblue.fatec.livecoding.ui.main.MainActivity"
     tools:showIn="@layout/activity_main">
 
-
-    <br.com.beblue.custom.ui.view.BBCirclePinView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
