--- a/LiveCoding/app/src/main/res/layout/content_main.xml
+++ b/LiveCoding/app/src/main/res/layout/content_main.xml
@@ -8,5 +8,13 @@
     tools:context="br.com.beblue.fatec.livecoding.ui.main.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerCompany"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
