--- a/LiveCoding/app/src/main/res/layout/company_list_item.xml
+++ b/LiveCoding/app/src/main/res/layout/company_list_item.xml
@@ -2,10 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
+        android:id="@+id/textViewQrCode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/textViewCompanyName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/textViewCompanyPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
